Obscure layout bug fix.
Some themes change the display property of <img>s to block instead of
leaving the default of inline.  This caused the Twitter logo image to
appear on a separate line.

--- a/assets/css/public-main.css
+++ b/assets/css/public-main.css
@@ -44,6 +44,8 @@ div.TT_wrapper {
 
 			margin-right: 2px;
 			margin-bottom: -4px;
+
+			display: inline;  /* In case themes override default img display */
 		}
 
 	div.TT_wrapper div.TT_byline {
